# vaultwarden-backup

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  bw_manager.py  config.yaml.example  docker-compose.restore.yaml  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt
src/vaultwarden_backup_manager/: __init__.py  __main__.py  archiver.py  config_loader.py  docker_controller.py  manager.py  store.py  utils.py
tests/: test_archiver.py  test_config_loader.py  test_docker_controller.py  test_store.py  test_utils.py
